cargo-features = ["edition2021"]

[package]
name = "custard-basics-test-a"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
custard-macros = {path="../../custard-macros"}
custard-use = {path="../../custard-use"}
ron = { version = "0.6.4" }
serde = { version = "1.0.77", features = ["derive"] }
